testsuite/tests/v1/patterns/complex/non_callable_property/test.out
Error: Error from the Lua engine
   ╭─[ <working-dir>/script.lkql:3:18 ]
   │
 3 │ print(var is Var(f_arg(): FooNode))
   │                  ────────┬───────  
   │                          ╰───────── Attempt to call field 'f_arg' (a table value)
───╯
